add device location ping ingestion
